--- a/app/src/main/res/layout/afsluttetspil_frag.xml
+++ b/app/src/main/res/layout/afsluttetspil_frag.xml
@@ -1,70 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="dk.jepsen.Galgeleh_frag.afsluttetspil">
 
     <LinearLayout
-        android:id="@+id/afsluttet"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_column="0">
+        android:layout_height="match_parent">
+
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Du har vundet!"
         android:id="@+id/ord"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:textSize="45dp"
-        android:textStyle="bold" />
+        android:fontFamily="sans-serif-medium"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#000000"
+        android:layout_marginBottom="50px"
+        />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="#0288d1"
+        android:layout_marginBottom="80dp">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="0px"
-            android:layout_weight="1"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_height="wrap_content"
+            android:text="test"
+            android:fontFamily="sans-serif-medium"
             android:id="@+id/ordetVar"
             android:layout_above="@+id/ord2"
-            android:textSize="30dp"
-            android:layout_centerHorizontal="true" />
+            android:textSize="25dp"
+            android:layout_gravity="center_horizontal"
+            />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:fontFamily="sans-serif-medium"
         android:id="@+id/ord3"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="30dp"/>
-
+        android:textSize="25dp"
+        android:layout_gravity="center_horizontal"/>
+    </LinearLayout>
 
         <Button
         android:layout_width="200dp"
-        android:layout_height="0px"
-        android:layout_weight="1"
+        android:layout_height="56dp"
+        android:background="@drawable/knap_blaa_bg"
         android:text="Prøv igen!"
+        android:elevation="14dp"
         android:id="@+id/againButton"
-        android:layout_alignParentBottom="true"
-        android:textSize="25dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"
+        />
 
 
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="0px"
-        android:layout_weight="1"
+        android:layout_width="200dp"
+        android:layout_height="56dp"
+        android:background="@drawable/knap_blaa_bg"
         android:id="@+id/highscoreButton"
+        android:elevation="14dp"
         android:layout_above="@+id/againButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"
+        />
 
     </LinearLayout>
 
