--- a/app/src/main/res/values/bogstaver.xml
+++ b/app/src/main/res/values/bogstaver.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <style name="bogstaver">
-    <item name="android:layout_marginRight">2dp</item>
+    <item name="android:layout_marginRight">5dp</item>
     <item name="android:layout_width">0px</item>
+    <item name="android:layout_marginBottom">5dp</item>
     <item name="android:layout_weight">1</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_gravity">center_horizontal</item>
